tests/ui/const-generics/bad-generic-in-copy-impl.stderr
error[E0308]: mismatched types
  --> $DIR/bad-generic-in-copy-impl.rs:3:13
   |
LL |     x: [u8; SIZE],
   |             ^^^^ expected `usize`, found `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
